Fixed java12 preview problem, if instead switch. Added README.md